fixed image endpoint issues
